@@ -1,0 +1,2 @@
+.. automodule:: hyperion.controller.agilent.agilent33522A
+    :members:
