@@ -1,0 +1,2 @@
+.. automodule:: hyperion.controller.dummy_resource
+    :members:
