@@ -10,5 +10,9 @@ Here we group all the controllers we use for the Hyperion project.
     :caption: Current controllers:
 
     controller/base_controller
+    controller/dummy_resource
     controller/dummy_output_controller
     controller/lcc25
+    controller/aa_mod18012
+    controller/agilent33522A
+    controller/sk_pol_ana
