@@ -1,0 +1,2 @@
+.. automodule:: hyperion.instrument.aotf.aa_aotf
+    :members:
