@@ -1,0 +1,2 @@
+.. automodule:: hyperion.instrument.function_generator.fun_gen
+    :members:
