@@ -1,0 +1,2 @@
+.. automodule:: hyperion.instrument.polarimeter.polarimeter
+    :members:
