@@ -1,0 +1,2 @@
+.. automodule:: hyperion.instrument.variable_waveplate.variable_waveplate
+    :members:
