@@ -5,14 +5,10 @@ For Users
 If you just want to use some of the controllers to connect your computer
 to your devices, this is the place to start.
 
-First, make sure you are at the right conda env. In the readme we have instructions on
-how to create it and to work on it you can run in a conda prompt:
+First, make sure you install the package correctly, following the
+instructions at: TO_BE_COMPLETED
 
-    >>> activate hyperion
 
-Then, to run the file scan.py in the experiment folder you you should do:
-
-    >>> python hyperion/controller/base_controller.py
-
-A nice place to start looking for examples in in the examples folder.
+A nice place to start looking for examples on how to use
+the package is the examples folder.
 
